# mm-retrieval-evaluation

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  annotation.py  compare.py  duplicates.py  fire_sql.py  msvd_to_mp4.py  pyproject.toml  similarity_app.py  viewer.py
data/: fire_aggregated_dataset.json  fire_msrvtt_dataset.json  fire_msvd_dataset.json
mmr/: analysis.py  cli.py  config.py  datasets.py  io.py  matcher.py  tasks.py
